@@ -26,6 +26,14 @@ echo "libpqxx version $PQXXVERSION"
 # Generate configure.ac based on current version numbers
 sed -e "s/@PQXXVERSION@/$PQXXVERSION/g" configure.ac.in >configure.ac
 
+# Generate version header.
+PQXX_MAJOR="`echo "$PQXXVERSION" | sed -e 's/[[:space:]]*\([0-9]*\)\..*$/\1/'`"
+PQXX_MINOR="`echo "$PQXXVERSION" | sed -e 's/[^.]*\.\([0-9]*\).*$/\1/'`"
+sed -e "s/@PQXXVERSION@/$PQXXVERSION/g" \
+	-e "s/@PQXX_MAJOR@/$PQXX_MAJOR/g" \
+	-e "s/@PQXX_MINOR@/$PQXX_MINOR/g" \
+	include/pqxx/version.hxx.template >include/pqxx/version.hxx
+
 # Generate Windows makefiles (adding carriage returns to make it MS-DOS format)
 makewinmake() {
 	./tools/template2mak.py "$1" | sed -e 's/$/\r/' >"$2"
